Picture with id doc
